crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_as_field_value.txt
Q = (pair key: -value)
------------------ DIAGNOSTICS -------------------
error: a negated grammar field cannot be a grammar-field value
 --> query.ptk:1:16
  |
1 | Q = (pair key: -value)
  |                ^^^^^^
  |
help: move the negated grammar field out of the field value and make it a direct child of the enclosing node
